--- a/frontend/src/pages/global.css
+++ b/frontend/src/pages/global.css
@@ -1,7 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,200;0,300;0,500;0,700;1,300&display=swap');
 * {
     color: #555;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
+    outline: 0;
+}
+
+body {
+    background: #e5e5e5;
+    margin: 0;
+    padding: 0;
+    font-family: 'Jost', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+}
+
+button {
+    cursor: pointer;
+}
+
+form input {
+    width: 350px;
+    height: 50px;
+    border: 1px solid #c4c4c4;
+    border-radius: 8px;
+    font-size: 100%;
+    font-weight: 500;
+    padding: 0 24px;
+}
+
+.btn {
+    margin-top: 10px;
+    width: 350px;
+    height: 50px;
+    font-size: 100%;
+    font-weight: 700;
+    color: #FFF;
+    background: #32732F;
+    border: 1px solid #32732F;
+    border-radius: 8px;
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 90%;
+    font-weight: 400;
+    text-decoration: none;
+}
+
+.icon svg {
+    color: #32732F;
 }
