FRONTEND-Components: created Register component and linked it in routes.js

--- a/frontend/src/pages/global.css
+++ b/frontend/src/pages/global.css
@@ -28,7 +28,7 @@ form input {
     border-radius: 8px;
     font-size: 100%;
     font-weight: 500;
-    padding: 0 24px;
+    padding: 0 15px;
 }
 
 .btn {
@@ -41,6 +41,12 @@ form input {
     background: #32732F;
     border: 1px solid #32732F;
     border-radius: 8px;
+    transition: background 0.2s, border 0.2s;
+}
+
+.btn:hover {
+    background: #0B5908;
+    border: 1px solid #0B5908;
 }
 
 .link {
@@ -50,8 +56,14 @@ form input {
     font-size: 90%;
     font-weight: 400;
     text-decoration: none;
+    transition: opacity 0.2s;
 }
 
-.icon svg {
+.link svg {
     color: #32732F;
+    margin-right: 5px;
+}
+
+.link:hover {
+    opacity: 0.6;
 }
